changed http tp https

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://isupersky.github.io/heykiranacomingsoon",
+  "homepage": "https://isupersky.github.io/heykiranacomingsoon",
   "name": "coming-soon-page",
   "version": "0.1.0",
   "private": true,
