--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "heykirana.com",
+  "homepage": "https://heykirana.com",
   "name": "coming-soon-page",
   "version": "0.1.0",
   "private": true,
